# 2D-Physics-Engine

./: CMakeLists.txt  README.md
src/: Application.cpp  Application.h  Graphics.cpp
src/Physics/: Body.cpp  Body.h  Constants.h  Force.cpp  Force.h  Math.cpp  Math.h  Particle.cpp  Particle.h
src/Physics/Collisions/: Collision.cpp  Collision.h  CollisionInformation.cpp  CollisionInformation.h  CollisionResolver.cpp  CollisionResolver.h
src/Physics/Shapes/: BoxShape.cpp  BoxShape.h  CircleShape.cpp  CircleShape.h  PolygonShape.cpp  PolygonShape.h  Shape.h
src/Physics/enums/: ShapeType.h
